# 15m-btc-sol-polymarket-arbitrage-bot

./: Cargo.toml  README.md
docs/: README.md  configuration.md  getting-started.md  trading-strategy.md
src/: main.rs
src/api/: client.rs  mod.rs
src/monitor/: market.rs  mod.rs
src/strategy/: detector.rs  mod.rs
src/trading/: executor.rs  mod.rs
