[package]
name = "gabagool-polymarket-arb-bot"
version = "0.1.0"
edition = "2021"
description = "15-minute BTC/SOL Polymarket arbitrage bot — monitors SOL and BTC price prediction markets and executes trades when arbitrage opportunities appear."
authors = ["gabagool222"]
repository = "https://github.com/gabagool222/15m-btc-sol-polymarket-arbitrage-bot"
license = "MIT"
readme = "README.md"
keywords = ["polymarket", "arbitrage", "btc", "sol", "trading", "prediction-market"]
categories = ["financial"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
